--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "html-react-parser": "^0.12.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
